-            This bug is fixed with Commit 096894d4 in https://gitlab.com/kamel5/SkinNopacity
Version 1.1.0
- Remove tue exception mentioned in Version 1.0.3
- Add service interface used by vdr-plugin-live 3.1.7+
Version 1.1.1
- Add auto timer feature
Version 1.1.2
- Bug fixes for auto timer feature
Version 1.1.3
- Also compile with vdr 2.4.*
- Get timestamps of last update
- Fix (rare) bug with thetvdb actors
Version 1.1.6
- Support thetvdb API V4. Please consider to support them https://u10505776.ct.sendgrid.net/ls/click?upn=xMYYCP13hVd-2BZPpbVcMPHeLXfv-2BPRdIsKm2qSeirIHi7kH9am8IxD-2BavFbeqGqIXIcjH_INgc0CXRkIvGU-2BJ1W6HLAynNbR0UBoMb2tkpDdezO3QRj-2FQPQAMrtJKVcB0N7eSvbYpjQTDNOQBf2pb94uDgGr0-2BXyXFk7Oyfva30BASYCRLvtRQyi5eOCAbH8fon7UETlPydobeLA3Recu9OsXol8c7Ng4pDAsH6KsFF8CH7HQoVxivnpKrQW2v4ek7U-2BYlWmH31o9Koke3vq-2FDsQ0P-2BiKLECU3LgttsntUcN8fnUs-3D
- Add language support
- Remove libXML2 dependency
- Drop support for vdr 2.2.* or earlier
- Backup in memory database only once a day
Version 1.1.13
- change of database content of tv_s_e_name. Might result in wrong identification of episodes. To avoid, you should delete this table while vdr is not running. The system will fill it again automatically. Note: This table is only used for episode names in non-default language.

2023-06-18: Version 1.2.0
- Auto timers
- Language support
- Support plugins providing external EPG
- And many other (smaller) improvemnts


2023-08-23: Version 1.2.1
- Service interface GetEnvironment is available

2025-04-01: Version 1.2.13
- New service interface virtual bool has_changed(const cRecording *recording, int &runtime)


2025-03-xx: Version 1.2.14
- Watch VDR recordings, regularily compare them with recordings known by tvscraper (recordings2)
- Fix possible crash during scan of recording. Thanks to kamel5 at vdr-portal.de for reporting
- Fix DurationLowSec for VPS events with ads. Thanks to kfb77 at vdr-portal.de for reporting