@@ -11,7 +11,6 @@
 regexTitleChannel->id;alpha-thema Gespräch.*;;TheTVDB_Series;446063
 regexTitleChannel->id;Auf dem Nockherberg \d{4};;TheTVDB_Series;325215
 regexTitleChannel->id;Baumhaus;KiKA HD;TheTVDB_Series;444939
-regexTitleChannel->id;Blickpunkt Sport.*;;TheTVDB_Series;444313
 regexTitleChannel->id;Brisant( [C|c]lassix)?;;TheTVDB_Series;360443
 regexTitleChannel->id;buten un binnen.*;;TheTVDB_Series;445896
 regexTitleChannel->id;Checkpoint;KiKA HD;TheTVDB_Series;327497
@@ -20,7 +19,6 @@ regexTitleChannel->id;Durch die Wildnis;KiKA HD;TheTVDB_Series;280218
 regexTitleChannel->id;(.*ischer|Orthodoxer) Gottesdienst;ZDF HD;TheTVDB_Series;358451
 regexTitleChannel->id;Extra;tagesschau24 HD;TheTVDB_Series;445894
 regexTitleChannel->id;Face to Face.*;NHK World-JPN;TheTVDB_Series;358480
-regexTitleChannel->id;Fakt ist\!.*;;TheTVDB_Series;445950
 regexTitleChannel->id;Glockenläuten .*;;TheTVDB_Series;445394
 regexTitleChannel->id;[H|h]eimspiel.*;HR Fernsehen HD;TheTVDB_Series;445729
 regexTitleChannel->id;.*[H|h]essenquiz;;TheTVDB_Series;445762
@@ -140,7 +138,6 @@ TheTVDB_SeriesID;ARD-Morgenmagazin;380312
 TheTVDB_SeriesID;ARD-Mittagsmagazin;445327
 TheTVDB_SeriesID;ARTE Journal;443203
 TheTVDB_SeriesID;ARTE Journal Junior;443965
-TheTVDB_SeriesID;artour;445097
 TheTVDB_SeriesID;aspekte;377074
 TheTVDB_SeriesID;Aus dem Feuer geboren: Die Kanaren;435227
 TheTVDB_SeriesID;Barbara Salesch - Das Strafgericht;433410
@@ -149,15 +146,12 @@ TheTVDB_SeriesID;Bericht aus Berlin;445453
 TheTVDB_SeriesID;Berlin direkt;445369
 TheTVDB_SeriesID;Bergauf-Bergab;434336
 TheTVDB_SeriesID;BR retro;431941
-TheTVDB_SeriesID;das aktuelle sportstudio;445017
 TheTVDB_SeriesID;Das Wort zum Sonntag;445001
 TheTVDB_SeriesID;Design X Stories;435833
-TheTVDB_SeriesID;Deutschlandbilder;445452
 TheTVDB_SeriesID;Die Mathias Richling Show;445378
 TheTVDB_SeriesID;Die Närrische Weinprobe;444485
 TheTVDB_SeriesID;Die Ratgeber;445344
 TheTVDB_SeriesID;Die Tierärzte - Retter mit Herz;445346
-TheTVDB_SeriesID;Doc Fischer;444931
 TheTVDB_SeriesID;Document 72 Hours;323119
 TheTVDB_SeriesID;Einfach. Gut. Bachmeier;444749
 TheTVDB_SeriesID;Einfach und köstlich - Heimatküche mit Björn Freitag;336407
@@ -166,7 +160,6 @@ TheTVDB_SeriesID;Euroblick;444307
 TheTVDB_SeriesID;EUROBLICK;444307
 TheTVDB_SeriesID;Euromaxx;442206
 TheTVDB_SeriesID;Europamagazin;445018
-TheTVDB_SeriesID;Exakt;444833
 TheTVDB_SeriesID;Fastnacht in Franken;416793
 TheTVDB_SeriesID;Felix und die wilden Tiere;267769
 TheTVDB_SeriesID;Frankenschau aktuell;444309
@@ -181,7 +174,6 @@ TheTVDB_SeriesID;heute Xpress;380313
 TheTVDB_SeriesID;heute-show spezial;234791
 TheTVDB_SeriesID;hessenschau;443200
 TheTVDB_SeriesID;J-Arena;348365
-TheTVDB_SeriesID;jetzt red i;444308
 TheTVDB_SeriesID;Kabarett aus Franken;444319
 TheTVDB_SeriesID;Kochstories;445649
 TheTVDB_SeriesID;Komödie aus Franken;389587
@@ -211,14 +203,12 @@ TheTVDB_SeriesID;MDR SACHSEN-ANHALT HEUTE;445383
 TheTVDB_SeriesID;MDR THÜRINGEN JOURNAL;445384
 TheTVDB_SeriesID;MDR um 2;445094
 TheTVDB_SeriesID;MDR um 4;443898
-TheTVDB_SeriesID;mehr/wert;443914
 TheTVDB_SeriesID;Meister des Alltags;443768
 TheTVDB_SeriesID;mein ausland;364293
 TheTVDB_SeriesID;Mensch Heimat;445377
 TheTVDB_SeriesID;Mit Herz am Herd;444878
 TheTVDB_SeriesID;Mitternachtsspitzen;355035
 TheTVDB_SeriesID;Musik für Sie;445732
-TheTVDB_SeriesID;Musik in den Bergen;444541
 TheTVDB_SeriesID;My Street Piano;443849
 TheTVDB_SeriesID;nano;266936
 TheTVDB_SeriesID;natur exclusiv;435753
@@ -273,10 +263,8 @@ TheTVDB_SeriesID;Wetter vor acht;445341
 TheTVDB_SeriesID;Wir in Bayern;442204
 TheTVDB_SeriesID;Wirtschaft vor acht;445078
 TheTVDB_SeriesID;WISO;340900
-TheTVDB_SeriesID;Wuhladko;443897
 TheTVDB_SeriesID;Zahn um Zahn;156001
 TheTVDB_SeriesID;ZDF-Morgenmagazin;445015
-TheTVDB_SeriesID;ZDF-Mittagsmagazin;445016
 TheTVDB_SeriesID;ZDF Royal;349565
 TheTVDB_SeriesID;Zoobabies;285075
 TheTVDB_SeriesID;Zu Tisch;140511
